# photon

./: .gitignore  LICENSE  README.md
1_bmp24/console/: bitmap.h  bitmap_util.h  bmp24  main.cpp  test.sh
1_bmp24/gui/bmp24/: CMakeLists.txt  bitmap_util.cpp  bitmap_util.h  imagebmp24widget.cpp  imagebmp24widget.h  main.cpp  operationstatus.h  resizeimagedialog.cpp  resizeimagedialog.h  resourses.qrc  windowbmp24.cpp  windowbmp24.h
2_tiff/: CMakeLists.txt  bitmap.h  imageutils.h  main.cpp  tiff.h
3_bmp_kernel/: CMakeLists.txt  imagerowsringbuffer.h  kernel.h  main.cpp
4_bmp_quick_gauss/: CMakeLists.txt  imagerowsringbuffer.h  kernel.h  main.cpp
5_bmp_quick_average/: CMakeLists.txt  bitmap.h  imagerowsringbuffer.h  main.cpp  task.txt
6_h_a_alpha/: CMakeLists.txt  bitmap.h  imagerowsringbuffer.h  imageutils.h  main.cpp  main_copy.cpp  main_copy_alternative.cpp  pixel.h  t_matrix.h  tiff.h  tiffimagereader.h
7_classification_claude_potier/: CMakeLists.txt  bitmap.h  main.cpp  main.cpp~RFb1d86d5.TMP  t_matrix.h
8_rotate_bmp/: CMakeLists.txt  bitmapmatrix.h  main.cpp  pixeltraits.h  rotatematrix.h
9_rotate_bmp_memory_optimize/: CMakeLists.txt  bitmap.h  bitmapmatrix.h  imagenecessaryinfo.h  main.cpp  pixeltraits.h  rotatematrix.h  weightscachesingleton.h
